Added day 4 part 2.

--- a/day_04/deno.json
+++ b/day_04/deno.json
@@ -1,5 +1,6 @@
 {
     "tasks": {
-        "solve": "deno run --allow-read solve.ts"
+        "solve": "deno run --allow-read solve.ts",
+        "solve2": "deno run --allow-read solve2.ts"
     }
 }
