Added AI generated version of day 3.

--- a/day_04/deno.json
+++ b/day_04/deno.json
@@ -1,6 +1,7 @@
 {
     "tasks": {
         "solve": "deno run --allow-read solve.ts",
-        "solve2": "deno run --allow-read solve2.ts"
+        "solve2": "deno run --allow-read solve2.ts",
+        "solve_ai": "deno run --allow-read solve_ai.ts"
     }
 }
