--- a/day_11/deno.json
+++ b/day_11/deno.json
@@ -1,7 +1,5 @@
 {
     "tasks": {
-        "solve": "deno run --allow-read solve.ts",
-        "solve2": "deno run --allow-read solve2.ts",
-        "test": "deno run --allow-read test.ts"
+        "solve": "deno run --allow-read solve.ts"
     }
 }
