--- a/day_17/deno.json
+++ b/day_17/deno.json
@@ -1,5 +1,5 @@
 {
     "tasks": {
-        "solve": "deno run --allow-read --v8-flags=--stack-size=1000000 solve.ts"
+        "solve": "deno run --allow-read solve.ts"
     }
 }
